Kubernetes2.0/frontend/deployment.yaml
#Deployment frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-broker-deployment
  labels:
    app: frontend-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-broker
  template:
    metadata:
      labels:
        app: frontend-broker
    spec:
      containers:
      - name: frontend-broker
        image: solinfbroker/frontend:prod
        ports:
        - containerPort: 80
