Kubernetes2.0/frontend/service.yaml
#Service Frontend
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-broker
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
