Kubernetes2.0/frontend/ingress.yaml
#Ingress Frontend
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-broker
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-broker
            port:
              number: 80
  - http:
      paths:
      - path: /auth/login
        pathType: Prefix
        backend:
          service:
            name: api-autenticacao-service
            port:
              number: 8080
  - http:
      paths:
      - path: /auth/register   
        pathType: Prefix
        backend:
          service:
            name: api-autenticacao-service
            port:
              number: 8080
